--- a/frontend/style.css
+++ b/frontend/style.css
@@ -79,8 +79,7 @@ header {
 nav {
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    min-height: 7.5vh;
+    min-height: 5vh;
     background-color: aquamarine;
 }
 
@@ -93,25 +92,75 @@ nav {
 .navButtons {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     list-style: none;
 }
 
 .navButtons > li > a {
     margin: 2px;
-    border: 1.5px solid black;
+    border: 3px solid black;
     padding: 5px;
     text-decoration: none;
     color: inherit;
     border-radius: 55px;
     font-size: 0.85em;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+
+.navButtons > li > a.write {
+    border: 3px solid black;
+    border-radius: 0px;
+    transition-duration: 1s;
+}
+
+.navButtons > li > a.write:hover {
+    border-radius: 55px;
 }
 
 .navButtons > li > a:hover {
     background-color: rgb(0, 231, 255);
-    cursor: pointer;
+    border-radius: 0px;
+}
+
+/*
+.navButtons > li > a[style^="border"]:hover{
+    background-color: aquamarine;
+    border-radius: 55px;
+}
+*/
+
+.write:hover {
+    border-radius: 55px;
 }
 
 .content {
-    width: 75vw;
+    width: 65vw;
     margin: 0 auto;
+}
+
+/*
+.content > .letter {
+}
+*/
+.letter {
+    margin: 10px 0px;
+    text-align: justify;
+}
+
+.letter > header {
+    font-size: 1.25em;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+
+.letter > p {
+    font-size: 0.75em;
+}
+
+.letter > footer {
+    font-size: 0.6em;
+    padding: 3px 0px;
+    font-weight: 300;
 }
